# cpp

./: Args.h  ArgsAsArrays.h  ArgsAsFuncs.h  AutoTypeDeducing.h  CMakeLists.txt  Decltype.h  TypeChecker.h  Widget.h  array_decay.cpp  func.h  items_common.h  list.h  list_test.cpp  main.cpp  tools.h  utilFunc.h
array_algos/: array_algo.cpp
c/: libc.c  libc.cpp  libc.h
chapter1/: item1.cpp  item2.cpp  item3.cpp
chapter1/item1_understand_template_type_deduction/: Resume.h  arrayArguments.h  case1.h  case2.h  case3.h  functionArguments.h  item1.cpp
chapter1/item2_undrestand_auto_type_deducing/: autoTypeDeducing.h  item2.cpp
chapter1/item3_understand_decltype/: decltype.h  item3.cpp
chapter2/: item5.cpp  item6.cpp  preferAutoToExpilicitTypes.h
chapter2/item5_prefer_auto_to_explicit_type_declarations/: autoVsExpilicitTypes.h  item5.cpp
chapter2/item6_explicitly_typed_initializer_idiom/: explicitlyTypedInitializer.h  item6.cpp
chapter3/: Elements.h  item7.cpp  item8.cpp
chapter3/item7_creating_objects/: InitializerList.h  creatingObjects.cpp  item7.cpp
chapter3/item8_prefer_nullptr_to_zero_and_NULL/: item8.cpp  nullptr.cpp
data_structures/: Edge.h  binary_heap.h  deque.h  dsu.h  graph.h  graph_adjacency_list.h  graph_edge_list.h  graph_list.h  graph_matrix.h  heap_comparators.h  list.h  list_test.cpp  node.h  node_test.cpp  queue.h  stack.h  test_array.cpp  test_bin_heap.cpp  test_deque.cpp  test_dsu_size_stat.cpp  test_graph.cpp  test_queue.cpp  test_stack.cpp  tools.h  vertex.h
include/data_structures/: dsu.h  graph_adjacency_list.h  heap_comparators.h  heap_node.h  list.h  stack.h
interview/: taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp
miniprofiler/: CMakeLists.txt  profiler.cpp  profiler.h
sorting/: merge_sort.cpp  quick_sort.cpp  sorting.cpp  tools.cpp
src/: main.cpp
src/c/: 1-2_variables_and_arithmetic_expressions.c  1-5_characters_input_output.c  1-7-8-9_characters_array.c  2-10_assignment_opertor.c  2-2_data_types.c  2-3_constants_and_enums.c  2-7_type_conversions.c  2-8_incement_decrement.c  2-9_bitwise_operations.c  3-3_if_else_bin_search.c  common.h  data_types.c  enums.c  extern_keyword.c  libc.c
src/chapter1/: item2.cpp  item3.cpp
src/chapter2/: item5.cpp  item6.cpp
src/chapter3/: item7.cpp  item8.cpp
src/cpp/: cppref.cpp  fundamental_types.h  helper.h  identifierts.h  reference_declaration.h  type_classification.h  type_naming.h  types.h
src/cpp/basic_concepts/: decltype.h  definitions_and_odr.h  extern_template.cpp  extern_template_foo.h  fundamental_types.h  identifierts.h  lifetime.h  object.h  reference_declaration.h  scope.h  sizeof.h  std_stuff.h  type_classification.h  type_naming.h
src/cpp/basic_concepts/type_names/: elaborated_type_specifier.h  enum.h  injected_class_name.h  type_alias.h  typedef.h  union.h
src/cpp/type_names/: clazz.h  elaborated_type_specifier.h  enum.h  type_alias.h  typedef.h  union.h
src/cpp_abi/: CMakeLists.txt  cpp_abi.cpp  cxa_exception.h  dwarf_util.cpp  dwarf_util.h  exception.c  lsda.h  lsda_llvm.h  script.sh  throw.cpp  throw.h  throw.s
src/data_structures/: list_test.cpp  test_array.cpp  test_bin_heap.cpp  test_deque.cpp  test_dsu_size_stat.cpp  test_graph.cpp  test_queue.cpp  test_stack.cpp
src/exception_handling/: CMakeLists.txt  UEFI_exceptions.md  eh_gcc.md  eh_gcc_sj_lj.md  eh_gcc_zero_cost.md  eh_llvm.md  eh_models_history.md  eh_models_llvm.md  eh_models_llvm_code.md  eh_msvc_SEH_win32.md  eh_msvc_SEH_win32_x86.md  eh_msvc_SEH_x86.md  eh_msvc_cpp_eh.md  eh_msvc_cxx_EH_x64.md  eh_msvc_seh.md  eh_msvc_win32_SEH.md  eh_sj_lj.md  gcc_eh.cpp  main.cpp  msvc_eh_keys.md  readme.md  seh.cpp  seh.md  seh_under_the_hood.cpp  setjmp_longjmp.cpp  stack_unwinding.md
src/exception_handling/gcc/: eh_gcc_sj_lj.md  gcc_stack_unwinding.cpp
src/exception_handling/msvc/: eh_msvc_SEH_win32_under_the_hood.md  eh_msvc_SEH_x86.md  eh_msvc_SEH_x86_under_the_hood.md  eh_msvc_cxx_EH_x64.md  seh.cpp
src/exception_handling/stack/: gcc_stack_unwinding.cpp  msvc_stack_unwinding.cpp  stack_frame_layout_x64_amd64_abi.md  stack_frame_layout_x64_win_abi.md  stack_unwinding.md
src/interview/: taskB.cpp  taskD.cpp  taskE.cpp
src/sorting/: bin_search.cpp  merge_sort.cpp  quick_sort.cpp
src/templates/: meta_functions.cpp  rvalues.cpp  rvalues.h  variadic_templates.cpp
templates/: tag_dispatching.cpp
